--- a/index.html
+++ b/index.html
@@ -1,20 +1,94 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <!--Import Google Icon Font-->
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <!--Import materialize.css-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
-
-    <!--Let browser know website is optimized for mobile-->
+    <link rel="stylesheet" href="css/main.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
 
 <body>
-<!--Import jQuery before materialize.js-->
 <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-
-<!-- Compiled and minified JavaScript -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>
+
+<div id="particles-js"></div>
+<script src="js/particles.min.js"></script>
+<script src="index.js"></script>
+
+
+<div data-0="transform:translate(0,0%);" data-100p="transform:translate(0,-100%);">
+    <div style="height: 30%"></div>
+    <h1>CTF(x)</h1>
+    <h2>August 13-14, 2016</h2>
+</div>
+
+<!--<div style="background-color: #D74CB4" data-0="transform:translate(0,100%);" data-100p="transform:translate(0,0%)" data-200p="transform:translate(0,0%)">-->
+    <!--<h1>Problem Types</h1>-->
+    <!--<div class="binary" data-0="width:0%;" data-0-top-top="width: 50%">-->
+        <!--Binary-->
+    <!--</div>-->
+<!--</div>-->
+<!--<div style="top: 10%" class="algo" data-100p="width:0%;" data-_box-200p="width:50%">-->
+    <!--Algo-->
+<!--</div>-->
+
+<div style="background-color: #D74CB4" data-0="transform:translate(0,100%);" data-100p="transform:translate(0,0%)" data-_binary-275p="" data-_binary-325p="transform:translate(0,-100%)">
+    <div style="height: 35%"></div>
+    <h1 class="center">Problem&nbsp;Types</h1>
+    <div class="binary" data-125p="transform:translate(-100%,0%);" data-_binary-125p="transform:translate(0,0%);">
+        <h3 class="center">Binary</h3>
+    </div>
+    <div class="algo" data-150p="transform:translate(-100%,0%);" data-_algo-150p="transform:translate(0,0%);">
+        <h3 class="center">Algorithms</h3>
+    </div>
+    <div class="crypto" data-175p="transform:translate(-100%,0%);" data-_crypto-175p="transform:translate(0,0%);">
+        <h3 class="center">Cryptography</h3>
+    </div>
+    <div class="web" data-200p="transform:translate(-100%,0%);" data-_web-200p="transform:translate(0,0%);">
+        <h3 class="center">Web</h3>
+    </div>
+    <div class="forensics" data-225p="transform:translate(-100%,0%);" data-_forensics-225p="transform:translate(0,0%);">
+        <h3 class="center">Forensics</h3>
+    </div>
+
+    <div class="binaryDesc" data-125p="transform:translate(100%,0%);" data-_binaryDesc-275p="transform:translate(0,0%);">
+        <h3 class="padded">Binary description placeholder</h3>
+    </div>
+    <div class="algoDesc" data-150p="transform:translate(100%,0%);" data-_algoDesc-300p="transform:translate(0,0%);">
+        <h3 class="padded">Algorithm description placeholder</h3>
+    </div>
+    <div class="cryptoDesc" data-175p="transform:translate(100%,0%);" data-_cryptoDesc-325p="transform:translate(0,0%);">
+        <h3 class="padded">Crypto description placeholder</h3>
+    </div>
+    <div class="webDesc" data-200p="transform:translate(100%,0%);" data-_webDesc-350p="transform:translate(0,0%);">
+        <h3 class="padded">Web description placeholder</h3>
+    </div>
+    <div class="forensicsDesc" data-225p="transform:translate(100%,0%);" data-_forensicsDesc-375p="transform:translate(0,0%);">
+        <h3 class="padded">Forensics description placeholder</h3>
+    </div>
+</div>
+
+<!--<div data-_box-100p="transform:translate(0,100%);" data-_box-200p="transform:translate(0,0%);"></div>-->
+
+<script type="text/javascript" src="js/skrollr.min.js"></script>
+<script type="text/javascript">
+    skrollr.init({
+        constants: {
+            binary: '100p',
+            algo: '100p',
+            crypto: '100p',
+            web: '100p',
+            forensics: '100p',
+            misc: '100p',
+
+            binaryDesc: '100p',
+            algoDesc: '100p',
+            cryptoDesc: '100p',
+            webDesc: '100p',
+            forensicsDesc: '100p',
+            miscDesc: '100p'
+        }
+    });
+</script>
 </body>
 </html>
