Fixed wrapping for mobile devices

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 <div style="background-color: #D74CB4" data-0="transform:translate(0,100%);" data-100p="transform:translate(0,0%)" data-_binary-275p="" data-_binary-325p="transform:translate(0,-100%)">
     <div style="height: 35%"></div>
-    <h1 class="center">Problem&nbsp;Types</h1>
+    <h1 class="center">Problem Types</h1>
     <div class="binary" data-125p="transform:translate(-100%,0%);" data-_binary-125p="transform:translate(0,0%);">
         <h3 class="center">Binary</h3>
     </div>
