Removed obselete comments

--- a/index.html
+++ b/index.html
@@ -22,16 +22,6 @@
     <h2>August 13-14, 2016</h2>
 </div>
 
-<!--<div style="background-color: #D74CB4" data-0="transform:translate(0,100%);" data-100p="transform:translate(0,0%)" data-200p="transform:translate(0,0%)">-->
-    <!--<h1>Problem Types</h1>-->
-    <!--<div class="binary" data-0="width:0%;" data-0-top-top="width: 50%">-->
-        <!--Binary-->
-    <!--</div>-->
-<!--</div>-->
-<!--<div style="top: 10%" class="algo" data-100p="width:0%;" data-_box-200p="width:50%">-->
-    <!--Algo-->
-<!--</div>-->
-
 <div style="background-color: #D74CB4" data-0="transform:translate(0,100%);" data-100p="transform:translate(0,0%)" data-_binary-275p="" data-_binary-325p="transform:translate(0,-100%)">
     <div style="height: 35%"></div>
     <h1 class="center" style="text-align: center; transform: translate(-50%, -75%)">Problem Types</h1>
@@ -73,6 +63,7 @@
 <script type="text/javascript" src="js/skrollr.min.js"></script>
 <script type="text/javascript">
     skrollr.init({
+        scale: 0.5,
         constants: {
             binary: '100p',
             algo: '100p',
