Updated animation speeds

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <h2>August 13-14, 2016</h2>
 </div>
 
-<div style="background-color: #D74CB4" data-0="transform:translate(0,100%);" data-100p="transform:translate(0,0%)" data-_binary-275p="" data-_binary-325p="transform:translate(0,-100%)">
+<div style="background-color: #D74CB4" data-0="transform:translate(0,100%);" data-100p="transform:translate(0,0%)" data-275p="" data-375p="transform:translate(0,-100%)">
     <div style="height: 35%"></div>
     <h1 class="center" style="text-align: center; transform: translate(-50%, -75%)">Problem Types</h1>
     <div class="binary" data-125p="transform:translate(-100%,0%);" data-_binary-125p="transform:translate(0,0%);">
@@ -41,19 +41,19 @@
         <h3 class="center">Forensics</h3>
     </div>
 
-    <div class="binaryDesc" data-125p="transform:translate(100%,0%);" data-_binaryDesc-275p="transform:translate(0,0%);">
+    <div class="binaryDesc" data-125p="transform:translate(100%,0%);" data-_binaryDesc-175p="transform:translate(0,0%);">
         <h3 class="padded">Binary description placeholder</h3>
     </div>
-    <div class="algoDesc" data-150p="transform:translate(100%,0%);" data-_algoDesc-300p="transform:translate(0,0%);">
+    <div class="algoDesc" data-150p="transform:translate(100%,0%);" data-_algoDesc-200p="transform:translate(0,0%);">
         <h3 class="padded">Algorithm description placeholder</h3>
     </div>
-    <div class="cryptoDesc" data-175p="transform:translate(100%,0%);" data-_cryptoDesc-325p="transform:translate(0,0%);">
+    <div class="cryptoDesc" data-175p="transform:translate(100%,0%);" data-_cryptoDesc-225p="transform:translate(0,0%);">
         <h3 class="padded">Crypto description placeholder</h3>
     </div>
-    <div class="webDesc" data-200p="transform:translate(100%,0%);" data-_webDesc-350p="transform:translate(0,0%);">
+    <div class="webDesc" data-200p="transform:translate(100%,0%);" data-_webDesc-250p="transform:translate(0,0%);">
         <h3 class="padded">Web description placeholder</h3>
     </div>
-    <div class="forensicsDesc" data-225p="transform:translate(100%,0%);" data-_forensicsDesc-375p="transform:translate(0,0%);">
+    <div class="forensicsDesc" data-225p="transform:translate(100%,0%);" data-_forensicsDesc-275p="transform:translate(0,0%);">
         <h3 class="padded">Forensics description placeholder</h3>
     </div>
 </div>
@@ -65,12 +65,12 @@
     skrollr.init({
         scale: 0.5,
         constants: {
-            binary: '100p',
-            algo: '100p',
-            crypto: '100p',
-            web: '100p',
-            forensics: '100p',
-            misc: '100p',
+            binary: '25p',
+            algo: '25p',
+            crypto: '25p',
+            web: '25p',
+            forensics: '25p',
+            misc: '25p',
 
             binaryDesc: '100p',
             algoDesc: '100p',
