--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
 </div>
 
 <div style="background-color: #D74CB4" data-0="transform:translate(0,100%);" data-100p="transform:translate(0,0%)" data-275p="" data-375p="transform:translate(0,-100%)">
-    <div style="height: 35%"></div>
-    <h1 class="center" style="text-align: center; transform: translate(-50%, -75%)">Problem Types</h1>
+    <h1 class="center" style="text-align: center;">Problem Types</h1>
     <div class="binary" data-125p="transform:translate(-100%,0%);" data-_binary-125p="transform:translate(0,0%);">
         <h3 class="center">Binary</h3>
     </div>
