--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
     <div class="section" style="background-color: #2E1CAF">
         <h2>What is a CTF?</h2>
         <div class="typed-strings">
-            <p>Capture The Flag, or CTF, is a name given to a certain class of tech and data security competitions.</p>
-            <p>While different CTFs sometimes take different forms, CTF(x) is a traditional Jeopardy style CTF.</p>
+            <p>Capture The Flag, or CTF, is a name given to a certain class of tech and data security competitions. While different CTFs sometimes take different forms, CTF(x) is a traditional Jeopardy style CTF.</p>
         </div>
         <div style="text-align: center">
             <div class="dynamic-div">
