Added bounce animation

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script type="text/javascript" src="js/jquery.fullpage.min.js"></script>
+    <script type="text/javascript" src="js/bounce.min.js"></script>
     <script src="js/typed.min.js"></script>
 </head>
 
@@ -43,7 +44,7 @@
         </div>
     </div>
     <div class="section" style="background-color: #6A5BD0">
-        <h1>Problem Types</h1>
+        <h1 class="rise">Problem Types</h1>
     </div>
 </div>
 
