Added non-breaking space to Problem Types

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
     </div>
     <div class="section" style="background-color: #6A5BD0">
-        <h1 class="rise">Problem Types</h1>
+        <h1 class="rise">Problem&nbsp;Types</h1>
     </div>
 </div>
 
