Added temp animation for problem types - not sure if we want to keep

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
     </div>
     <div class="section" style="background-color: #D74CB4">
-        <h2>When is CTF(x)?</h2>
+        <h2>When&nbsp;is&nbsp;CTF(x)?</h2>
         <div class="typed-strings">
             <p>CTF(x) will take place Saturday, August 13, 2016 6PM EDT to Sunday, August 14, 2016 6PM EDT</p>
         </div>
@@ -45,6 +45,10 @@
     </div>
     <div class="section" style="background-color: #6A5BD0">
         <h2 class="rise">Problem&nbsp;Types</h2>
+        <h3 class="slide-right">Forensics</h3>
+        <h3 class="slide-right">Web</h3>
+        <h3 class="slide-right">Crypto</h3>
+        <h3 class="slide-right">Binary</h3>
     </div>
 </div>
 
