--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="section" style="background-color: #2E1CAF">
         <h2>What is a CTF?</h2>
         <div class="typed-strings">
-            <p>Capture The Flag, or CTF, is a name given to a certain class of tech and data security competitions. While different CTFs sometimes take different forms, CTF(x) is a traditional Jeopardy style CTF.</p>
+            <p>Capture The Flag, or CTF, is a name given to a certain class of tech and data security competitions. While different CTFs sometimes take different forms, CTF(x) is a traditional <a href="https://ctftime.org/ctf-wtf/" target="_blank">Jeopardy style CTF</a>.</p>
         </div>
         <div style="text-align: center">
             <div class="dynamic-div">
@@ -31,7 +31,7 @@
         </div>
     </div>
     <div class="section" style="background-color: #D74CB4">
-        <h2>When&nbsp;is&nbsp;CTF(x)?</h2>
+        <h2>When is CTF(x)?</h2>
         <div class="typed-strings">
             <p>CTF(x) will take place Saturday, August 13, 2016 6PM EDT to Sunday, August 14, 2016 6PM EDT</p>
         </div>
