Add category descriptions/make some tweaks

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     </div>
     <div class="section" style="background-color: #2E1CAF">
         <h2>What is a CTF?</h2>
+        <br/>
         <div class="typed-strings">
             <p>Capture The Flag, or CTF, is a name given to a certain class of tech and data security competitions. While different CTFs sometimes take different forms, CTF(x) is a traditional <a href="https://ctftime.org/ctf-wtf/" target="_blank">Jeopardy style CTF</a>.</p>
         </div>
@@ -32,6 +33,7 @@
     </div>
     <div class="section" style="background-color: #D74CB4">
         <h2>When is CTF(x)?</h2>
+        <br/>
         <div class="typed-strings">
             <p>CTF(x) will take place Saturday, August 13, 2016 6PM EDT to Sunday, August 14, 2016 6PM EDT</p>
         </div>
@@ -44,11 +46,18 @@
         </div>
     </div>
     <div class="section" style="background-color: #6A5BD0">
-        <h2 class="rise">Problem&nbsp;Types</h2>
-        <h3 class="slide-right">Forensics</h3>
-        <h3 class="slide-right">Web</h3>
-        <h3 class="slide-right">Crypto</h3>
+        <h2 class="rise">Problem Types</h2>
+        <br/>
         <h3 class="slide-right">Binary</h3>
+        <p class="slide-right">Exploit, pwn, and reverse engineer programs</p>
+        <h3 class="slide-right">Forensics</h3>
+        <p class="slide-right">Analyze files and recover hidden data</p>
+        <h3 class="slide-right">Algorithms</h3>
+        <p class="slide-right">Design programs and write code to solve various challenges</p>
+        <h3 class="slide-right">Web</h3>
+        <p class="slide-right">Find and exploit vulnerabilities in websites</p>
+        <h3 class="slide-right">Crypto</h3>
+        <p class="slide-right">Decode messages, crack cryptosystems, and solve ciphers and puzzle</p>
     </div>
 </div>
 
