Update categories page

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" type="text/css" href="css/jquery.fullpage.min.css" />
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Source+Code+Pro' rel='stylesheet' type='text/css'>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
@@ -46,17 +47,17 @@
         </div>
     </div>
     <div class="section" style="background-color: #6A5BD0">
-        <h2 class="rise">Problem Types</h2>
+        <h2>Problem Types</h2>
         <br/>
-        <h3 class="slide-right">Binary</h3>
+        <h3><i class="fa fa-fw fa-cogs"></i> Binary</h3>
         <p class="slide-right">Exploit, pwn, and reverse engineer programs</p>
-        <h3 class="slide-right">Forensics</h3>
+        <h3><i class="fa fa-fw fa-search"></i> Forensics</h3>
         <p class="slide-right">Analyze files and recover hidden data</p>
-        <h3 class="slide-right">Algorithms</h3>
+        <h3><i class="fa fa-fw fa-code"></i> Algorithms</h3>
         <p class="slide-right">Design programs and write code to solve various challenges</p>
-        <h3 class="slide-right">Web</h3>
+        <h3><i class="fa fa-fw fa-link"></i> Web</h3>
         <p class="slide-right">Find and exploit vulnerabilities in websites</p>
-        <h3 class="slide-right">Crypto</h3>
+        <h3><i class="fa fa-fw fa-unlock-alt"></i> Crypto</h3>
         <p class="slide-right">Decode messages, crack cryptosystems, and solve ciphers and puzzle</p>
     </div>
 </div>
