Remove slide in animation

--- a/index.html
+++ b/index.html
@@ -46,19 +46,19 @@
             </div>
         </div>
     </div>
-    <div class="section" style="background-color: #6A5BD0">
+    <div class="section" id="problem-types" style="background-color: #6A5BD0">
         <h2>Problem Types</h2>
         <br/>
         <h3><i class="fa fa-fw fa-cogs"></i> Binary</h3>
-        <p class="slide-right">Exploit, pwn, and reverse engineer programs</p>
+        <p>Exploit, pwn, and reverse engineer programs</p>
         <h3><i class="fa fa-fw fa-search"></i> Forensics</h3>
-        <p class="slide-right">Analyze files and recover hidden data</p>
+        <p>Analyze files and recover hidden data</p>
         <h3><i class="fa fa-fw fa-code"></i> Algorithms</h3>
-        <p class="slide-right">Design programs and write code to solve various challenges</p>
+        <p>Design programs and write code to solve various challenges</p>
         <h3><i class="fa fa-fw fa-link"></i> Web</h3>
-        <p class="slide-right">Find and exploit vulnerabilities in websites</p>
+        <p>Find and exploit vulnerabilities in websites</p>
         <h3><i class="fa fa-fw fa-unlock-alt"></i> Crypto</h3>
-        <p class="slide-right">Decode messages, crack cryptosystems, and solve ciphers and puzzle</p>
+        <p>Decode messages, crack cryptosystems, and solve ciphers and puzzle</p>
     </div>
 </div>
 
