--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <div id="fullpage">
     <div class="section">
         <h1>CTF(x)</h1>
-        <h2>August 13-14, 2016</h2>
+        <h2>August 12-14, 2016</h2>
     </div>
     <div class="section" style="background-color: #2E1CAF">
         <h2>What is a CTF?</h2>
@@ -36,7 +36,7 @@
         <h2>When is CTF(x)?</h2>
         <br/>
         <div class="typed-strings">
-            <p>CTF(x) will take place Saturday, August 13, 2016 6PM EDT to Sunday, August 14, 2016 6PM EDT</p>
+            <p>CTF(x) will take place from Friday, August 12, 2016 6PM EDT to Sunday, August 14, 2016 6PM EDT</p>
         </div>
         <div style="text-align: center">
             <div class="dynamic-div">
