Fix typo & add register button

--- a/index.html
+++ b/index.html
@@ -19,12 +19,17 @@
     <div class="section">
         <h1>CTF(x)</h1>
         <h2>August 12-14, 2016</h2>
+	<br/>
+	<br/>
+	<div style="text-align: center;">
+		<a class="button" href="http://go.ctfx.io/">Register</a>
+	</div>
     </div>
     <div class="section" style="background-color: #2E1CAF">
         <h2>What is a CTF?</h2>
         <br/>
         <div class="typed-strings">
-            <p>Capture The Flag, or CTF, is a name given to a certain class of tech and data security competitions. While different CTFs sometimes take different forms, CTF(x) is a traditional <a href="https://ctftime.org/ctf-wtf/" target="_blank">Jeopardy style CTF</a>.</p>
+            <p>Capture The Flag, or CTF, is a name given to a certain class of tech and data security competitions. While different CTFs sometimes take different forms, CTF(x) is a traditional <a class="yellow" href="https://ctftime.org/ctf-wtf/" target="_blank">Jeopardy style CTF</a>.</p>
         </div>
         <div style="text-align: center">
             <div class="dynamic-div">
@@ -58,7 +63,7 @@
         <h3><i class="fa fa-fw fa-link"></i> Web</h3>
         <p>Find and exploit vulnerabilities in websites</p>
         <h3><i class="fa fa-fw fa-unlock-alt"></i> Crypto</h3>
-        <p>Decode messages, crack cryptosystems, and solve ciphers and puzzle</p>
+        <p>Decode messages, crack cryptosystems, and solve ciphers and puzzles</p>
     </div>
 </div>
 
