--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<br/>
 	<br/>
 	<div style="text-align: center;">
-		<a class="button" href="http://go.ctfx.io/">Register</a>
+		<a class="button" href="http://compete.ctfx.io/">Register</a>
 	</div>
     </div>
     <div class="section" style="background-color: #2E1CAF">
