--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <h2>When is CTF(x)?</h2>
         <br/>
         <div class="typed-strings">
-            <p>CTF(x) will take place from Friday, August 26, 2016 6PM EDT to Sunday, August 28, 2016 6PM EDT</p>
+            <p>CTF(x) took place from Friday, August 26, 2016 6PM EDT to Sunday, August 28, 2016 6PM EDT</p>
         </div>
         <div style="text-align: center">
             <div class="dynamic-div">
