Add link to past problems; added a title

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <<title>CTF(x)</title>
+
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" type="text/css" href="css/jquery.fullpage.min.css" />
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
@@ -18,7 +20,12 @@
 <div id="fullpage">
     <div class="section">
         <h1>CTF(x)</h1>
-        <h2>August 26-28, 2016</h2>
+        <h2>Ran August 26-28, 2016</h2>
+        <br/>
+        <br/>
+		<div style="text-align: center;">
+			<a class="button" href="https://github.com/ctf-x/ctfx-problems">View Problems</a>
+		</div>
 	<br/>
 	<br/>
     </div>
