fix typo in html

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <<title>CTF(x)</title>
+    <title>CTF(x)</title>
 
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" type="text/css" href="css/jquery.fullpage.min.css" />
@@ -26,8 +26,8 @@
 		<div style="text-align: center;">
 			<a class="button" href="https://github.com/ctf-x/ctfx-problems">View Problems</a>
 		</div>
-	<br/>
-	<br/>
+	   <br/>
+	   <br/>
     </div>
     <div class="section" style="background-color: #2E1CAF">
         <h2>What is a CTF?</h2>
